# tashi_project_vanguard

./: .gitignore  Cargo.toml  README.md  drone_swarm_sim.html  index.html  vanguard_node_2.redb
blender/: Text  cityscape_destroyed.glb  destroy_city.py  destroy_city_main.py  destruction.blend  destruction_mat.blend  destruction_mat.blend1
blender/tashi-godot/: cityscape.glb  cityscape.glb.import  cityscape_destroyed.glb.import  cityscape_destroyed_2.glb  cityscape_destroyed_2.glb.import  drone.gd  drone.gd.uid  drone.tscn  icon.svg.import  project.godot  world.tscn
simulator/: Cargo.toml
simulator/src/: keys.rs  main.rs
tashi-node/: Cargo.toml
tashi-node/src/: analyst.rs  main.rs  state_server.rs
