[package]
name = "tashi-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Add these below for the crates that need them:
reqwest = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tashi-vertex = { workspace = true }
rig-core = "0.35.0"   # check crates.io for newest; API matches the latest docs
tower-http = { version = "0.5", features = ["cors"] }
redb = "4.1.0"

[[bin]]
name = "warmup"
path = "src/bin/warmup.rs"

[[bin]]
name = "gen_warmup_config"
path = "src/bin/gen_warmup_config.rs"